# AIDABench

./: .env.example  .gitignore  README.md  auto_eval.py  count_input_files.py  download_data.py  pyproject.toml  render.html  res.txt  run_eval.sh
agents/: claude_jupyter_agent.py  claude_subprocess_agent.py  openai_jupyter_agent.py  openai_subprocess_agent.py
data/: summary.json
data/chart/: chart.jsonl
data/chart/input/chart_1/: 工艺数据.xlsx
data/chart/input/chart_10/: 1._基因表达矩阵.xlsx
data/chart/input/chart_100/: 2025年成交_信息_-_副本.xlsx  china_provinces.json
data/chart/input/chart_103/: temp_table.csv
data/chart/input/chart_104/: 副本小组作业.docx
data/chart/input/chart_105/: 大论文问卷数据.xlsx
data/chart/input/chart_106/: Traffic_Daily_-_superset.xlsx
data/chart/input/chart_11/: 职务表格4.xlsx
data/chart/input/chart_110/: 数据概览_数据概览报表10月份.xlsx  数据概览_数据概览报表11月份.xlsx  询盘跟进表_脱敏(111).xlsx
data/chart/input/chart_112/: 新建_XLSX_工作表.xlsx
data/chart/input/chart_113/: online_course.csv
data/chart/input/chart_14/: 辞工2024.xlsx  辞工2025.xlsx
data/chart/input/chart_15/: 2025第一学期.xlsx  2025第二学期.xlsx
data/chart/input/chart_16/: 拉萨河24-25断面.xls
data/chart/input/chart_19/: 辞工汇总表2024年度_副本.xlsx  辞工汇总表2025年度_副本.xlsx
data/chart/input/chart_2/: 工艺数据2.xlsx
data/chart/input/chart_24/: 202511期中数据分析_(1).xlsx
data/chart/input/chart_26/: 买家身份跟等级.xlsx
data/chart/input/chart_27/: 人工智能1班.xlsx  人工智能2班.xlsx  人工智能3班.xlsx  人工智能4班.xlsx  人工智能5班.xlsx  人工智能6班.xlsx  人工智能7班.xlsx
data/chart/input/chart_28/: 8._生物词.xlsx
data/chart/input/chart_29/: 新建_DOCX_文档_(5).docx
data/chart/input/chart_3/: 形变.xlsx
data/chart/input/chart_37/: 交流中心园区化发展分析报告——打造无边界平台型服务园区_(3).docx
data/chart/input/chart_39/: 4家项目药店支付结构分析_desensitized.xlsx
data/chart/input/chart_4/: 5._数据降维.xlsx
data/chart/input/chart_40/: 24级人工智能2班_脱敏版.csv
data/chart/input/chart_41/: 第八小学总（2025年秋）英语-期中测试成绩统计与质量分析表.xls
data/chart/input/chart_42/: 空气质量_标注严重污染.xlsx
data/chart/input/chart_43/: 作图用_desensitized.xlsx
data/chart/input/chart_44/: 新建_XLS_工作表.xlsx
data/chart/input/chart_45/: 水_RQ.xlsx
data/chart/input/chart_46/: 【教学班】2025-2026学年秋学季季末考试（七年级）-七年级学生成绩.xlsx  【教学班】2025-2026学年秋学季季末考试（七年级）-数学-小题分析.xlsx
data/chart/input/chart_47/: 滑雪康复旅游项目团队介绍.docx
data/chart/input/chart_49/: 辞工汇总表2024年度.xlsx  辞工汇总表2025年度.xlsx
data/chart/input/chart_5/: 1-4题格式.xlsx  参与者.xlsx
data/chart/input/chart_50/: 七年级试题分析.xlsx  九年级试题分析.xlsx  八年级试题分析.xlsx
data/chart/input/chart_51/: 七年级试题分析.xlsx  九年级试题分析.xlsx  八年级试题分析.xlsx
data/chart/input/chart_52/: 表格2-2.xlsx
data/chart/input/chart_53/: 测试.xlsx
data/chart/input/chart_54/: 人资体系.xlsx
data/chart/input/chart_55/: 作图用.xlsx
data/chart/input/chart_57/: 访客分析48周.xlsx
data/chart/input/chart_58/: 文件2参与者.xlsx
data/chart/input/chart_6/: 体彩形态.xlsx
data/chart/input/chart_60/: 青春健康俱乐部调查数据描述性统计分析报告-全文-20251104.docx
data/chart/input/chart_65/: 24级人工智能1班_脱敏.xlsx  24级人工智能2班_脱敏.xlsx  24级人工智能3班_脱敏.xlsx  24级人工智能4班_脱敏.xlsx  24级人工智能5班_脱敏.xlsx  (+2 more)
data/file_generation/: file_generation.jsonl
data/numeric/: numeric.jsonl
evaluation/: config.py  run.py  utils.py
evaluation/evaluators/: __init__.py  base_evaluator.py  chart_evaluator.py  file_evaluator_agent.py  file_generation_evaluator.py  numerical_evaluator.py
evaluation/runner/: eval_QA.py  eval_chart.py  eval_data_visualization.py  eval_file_generation.py  eval_numeric.py
infer/: dataset_info.py  framework.py  run.py
infer/prompts/: jiawei_general_20250113.txt  jiawei_general_no_tool_describe.txt  jiawei_think_20250116.txt  jiawei_thinktool_20250123.txt  openai_tool_general.txt  openai_tool_general_10round.txt  openai_tool_general_15round.txt  openai_tool_general_20round.txt  openai_tool_general_30round.txt  openai_tool_general_subprocess.txt  tuoming.txt
infer/runner/: run_QA.py  run_chart.py  run_data_visualization.py  run_file_generation.py  run_numeric.py
toolkits/: Revenue_Calculation_Details.xlsx  __init__.py  file_info_output.txt  get_file_info.py  lite_code_execution_toolkit.py
(+1310 files in other folders)
